token-config : Added web3 url
- Added web3 url

--- a/token-config.json
+++ b/token-config.json
@@ -1,4 +1,7 @@
 {
+  "web3" : {
+    "url": "https://kovan.infura.io/VbFnikDJO7ys1poOWJhv"
+  },
   "tokenList": {
     "MCO": {
       "decimal": 8,
