--- a/token-config.json
+++ b/token-config.json
@@ -14,6 +14,12 @@
       "address": "0x0b27efaa5a73ebbb1404b6ebee811da7bf07c989",
       "step": 0.1,
       "largeAmountThreshold": 50
+    },
+    "CRO": {
+      "decimal": 18,
+      "address": "0x0b27efaa5a73ebbb1404b6ebee811da7bf07c989",
+      "step": 0.1,
+      "largeAmountThreshold": 50
     }
   }
 }
