--- a/token-config.json
+++ b/token-config.json
@@ -1,6 +1,6 @@
 {
   "web3" : {
-    "url": "https://kovan.infura.io/VbFnikDJO7ys1poOWJhv"
+    "url": "https://kovan.infura.io/v3/91ada2a0fd93476a8de8fedc5719c56b"
   },
   "tokenList": {
     "MCO": {
